#1665 Frontpage spacing fixed

--- a/style/slider.css
+++ b/style/slider.css
@@ -92,7 +92,7 @@ html[xmlns] .slides {display: block;}
 
 
 #main-slider {
-    margin: 0px 0px 10px;
+    margin: 0px 0px 20px;
 }
 
 .slides li {
